--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,6 +101,8 @@ install-keptn:
     sed -i -- s/CLUSTER_NAME_PLACEHOLDER/${cluster_name}/g creds.json
     sed -i -- s/AWS_REGION/${cluster_region}/g creds.json
     eksctl utils update-coredns --name=${cluster_name} --region=${cluster_region} --approve
+    echo "Waiting for CoreDNS Update..."
+    sleep 20
     keptn install --platform=eks -c=creds.json --keptn-version=0.5.2|tee inst.out
     export ZONE_ID=$(aws route53 list-hosted-zones-by-name --dns-name=${AWS_ROUTE53_DOMAIN}|jq ".HostedZones[0].Id"|grep -o -P '(?<=hostedzone/).*(?=")')
     export KEPTN_ENDPOINT=$(cat inst.out|grep "set for"|awk {'print $13'})
