--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -9,6 +9,9 @@ metadata:
     ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    synops/create: "true"
+    synops/endpoint: "/service/ping"
+    synops/synthetic.location: "private"
   labels:
 {{ include "application.labels" . | indent 4 }}
 spec:
