--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -175,20 +175,22 @@ keptn-sli-service:
     cd ~
     apk add git
     git clone --branch 0.4.0 https://github.com/keptn-contrib/dynatrace-service --single-branch
-    # Copy Kubeconfig to expected Keptn Location
+    echo $?
+    echo "Copy Kubeconfig to expected Keptn Location"
     mkdir ~/.kube
     cp $KUBECONFIG ~/.kube/config    
     # Export DT_TENANT_ID and TOKEN as expected Env Vars
     export DT_TENANT=$DT_TENANT_ID
 
     cd dynatrace-service/deploy/scripts
-    # Creating credentials file with CI Variables
+    echo "Creating credentials file with CI Variables"
     CREDS=./creds_dt.json
     rm $CREDS 2> /dev/null
     cat ./creds_dt.sav | sed 's~DYNATRACE_TENANT_PLACEHOLDER~'"$DT_TENANT_ID"'~' | \
       sed 's~DYNATRACE_API_TOKEN~'"$DT_API_TOKEN"'~' | \
       sed 's~DYNATRACE_PAAS_TOKEN~'"$DT_PAAS_TOKEN"'~' >> $CREDS    
 
+    echo "Running deployDynatraceCommon.sh"
     curl -o deployDynatraceCommon.sh https://gitlab.com/checkelmann/dynatrace-pipeline/raw/master/assets/deployDynatraceCommon.sh
     source ./deployDynatraceCommon.sh
     deploy_dt
