--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -223,6 +223,8 @@ configure-quality-stage:
     KEPTN_ENDPOINT=https://api.keptn.$(kubectl get cm keptn-domain -n keptn -ojsonpath={.data.app_domain})
     KEPTN_API_TOKEN=$(kubectl get secret keptn-api-token -n keptn -ojsonpath={.data.keptn-api-token} | base64 -d)
     keptn auth -a $KEPTN_API_TOKEN -e $KEPTN_ENDPOINT
+    echo $GITLAB_USER_LOGIN
+    
     keptn create project $APPLICATION_SHORT_NAME --shipyard=./shipyard.yaml --git-user=$GITLAB_USER_LOGIN --git-token=$KEPTN_GL_TOKEN --git-remote-url=$KEPTN_GL_REPO
     keptn create service $APPLICATION_SHORT_NAME --project=$APPLICATION_SHORT_NAME
 
