--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -241,17 +241,18 @@ configure-quality-stage:
     kubectl apply -f tmp.yaml
     
     DT_TENANT="${DT_TENANT_ID}.live.dynatrace.com"
-    echo "DT_TENANT: $DT_TENANT
     DT_API_TOKEN: $DT_API_TOKEN" > dynatrace_secret.yaml
     SECRET=$(kubectl get secret -n keptn -ojson|grep dynatrace-credentials-$APPLICATION_SHORT_NAME)
-    if [ "$SECRET" == "" ]; then
+
+    if [ "$SECRET" = "" ]; then
       echo "Creating new Secret"
       kubectl create secret generic dynatrace-credentials-$APPLICATION_SHORT_NAME -n "keptn" --from-file=dynatrace-credentials=dynatrace_secret.yaml
     else
       echo "Recreating Secret"
       kubectl delete secret dynatrace-credentials-$APPLICATION_SHORT_NAME -n "keptn"
       kubectl create secret generic dynatrace-credentials-$APPLICATION_SHORT_NAME -n "keptn" --from-file=dynatrace-credentials=dynatrace_secret.yaml
-    fi      
+    fi
+
     kubectl apply -f dynatrace_sli.yaml
     keptn add-resource --project=$APPLICATION_SHORT_NAME --service=$APPLICATION_SHORT_NAME --stage=$CI_ENVIRONMENT_SLUG --resource=dynatrace_slo.yaml --resourceUri=slo.yaml
   when: manual  
