--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -243,11 +243,16 @@ configure-quality-stage:
     DT_TENANT="${DT_TENANT_ID}.live.dynatrace.com"
     
     cat << EOF > dynatrace_secret.yaml
-    DT_TENANT: $DT_TENANT
-    DT_API_TOKEN: $DT_API_TOKEN
+    DT_TENANT: ${DT_TENANT}
+    DT_API_TOKEN: ${DT_API_TOKEN}
     EOF
 
-    SECRET=$(kubectl get secret -n keptn -ojson|grep dynatrace-credentials-$APPLICATION_SHORT_NAME)
+    cat dynatrace_secret.yaml
+    
+    echo "Checking for secrets..."
+    kubectl get secret -n keptn -ojson|grep "dynatrace-credentials-${APPLICATION_SHORT_NAME}"
+
+    SECRET=$(kubectl get secret -n keptn -ojson|grep "dynatrace-credentials-${APPLICATION_SHORT_NAME}")
 
     if [ "$SECRET" = "" ]; then
       echo "Creating new Secret"
