--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -9,9 +9,11 @@ metadata:
     ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    synops/create: "true"
-    synops/endpoint: "/service/ping"
-    synops/synthetic.location: "private"
+    synop/create: "true"
+    synop/endpoint: "/service/ping"
+    synop/synthetic.location: "private"
+    synop/synthetic.tags: "opa,oma"
+    synop/synthetic.frequencyMin: "10"
   labels:
 {{ include "application.labels" . | indent 4 }}
 spec:
