--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for deploying the sample app
-name: sample-app
+name: sampleapp
 version: 0.2.0
