--- a/ci-includes/keptn_evaluation.yaml
+++ b/ci-includes/keptn_evaluation.yaml
@@ -24,7 +24,7 @@ keptn_evaluation:
     fin="0"
     until [ "$fin" = "1" ]
     do
-        status=$(curl -s -k -X GET "${KEPTN_ENDPOINT}/v1/event?keptnContext=${ctxid}&type=sh.keptn.events.evaluation-done" -H "accept: application/json" ->
+        status=$(curl -s -k -X GET "${KEPTN_ENDPOINT}/v1/event?keptnContext=${ctxid}&type=sh.keptn.events.evaluation-done" -H "accept: application/json" -H "x-token: ${KEPTN_API_TOKEN}"|jq .data.evaluationdetails.indicatorResults[0].status)
         if [ "$status" = "null" ]; then
             echo "Status null will wait..."
             sleep 5
@@ -33,7 +33,8 @@ keptn_evaluation:
         fi
     done
     if [ "$status" = "\"fail\"" ]; then
-            echo "evaluation failed"
+            echo "Keptn Quality Gate - Evaluation failed!"
+            echo "For details visit the Bridge!"
             exit 1
     else
             echo "Juhee" 
