Removed unused stages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ stages:
   - deploy
   - verify
   - chatops
-  - rollout
+#  - rollout
 
 #################################################################
 # Build Stage
@@ -91,9 +91,9 @@ deploy-to-prod:
   script:
     - echo "ChatOps Stage - Deploy to Prod"
 
-rollout-to-prod:
-  stage: rollout
-  only: [tags]
-  needs: ["deploy-to-prod"]
-  script:
-    - echo "Rolling out to Production"
+#rollout-to-prod:
+#  stage: rollout
+#  only: [tags]
+#  needs: ["deploy-to-prod"]
+#  script:
+#    - echo "Rolling out to Production"
