--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,7 +122,7 @@ install-keptn:
     eksctl utils update-coredns --name=${cluster_name} --region=${cluster_region} --approve
     echo "Waiting for CoreDNS Update..."
     sleep 20
-    keptn install --platform=eks -c=creds.json --keptn-version=bug/1154/eks-install|tee inst.out
+    keptn install --platform=eks -c=creds.json --keptn-version=0.6.0.beta2|tee inst.out
     export ZONE_ID=$(aws route53 list-hosted-zones-by-name --dns-name=${AWS_ROUTE53_DOMAIN}|jq ".HostedZones[0].Id"|grep -o -P '(?<=hostedzone/).*(?=")')
     export KEPTN_ENDPOINT=$(cat inst.out|grep "set for"|awk {'print $13'})
     aws route53 change-resource-record-sets --hosted-zone-id "${ZONE_ID}" --change-batch "{\"Changes\":[{\"Action\":\"CREATE\",\"ResourceRecordSet\":{\"Name\":\"*.${AWS_ROUTE53_DOMAIN}.\",\"Type\":\"CNAME\",\"TTL\":60,\"ResourceRecords\":[{\"Value\":\"${KEPTN_ENDPOINT}\"}]}}]}" --region us-east-1
