--- a/ci-includes/dt_jmeter_loadtest.yaml
+++ b/ci-includes/dt_jmeter_loadtest.yaml
@@ -8,13 +8,13 @@ generate-load:
     export JMETER_URL=http://$(kubectl -n ${CI_ENVIRONMENT_NAME} get ingress/${APPLICATION_SHORT_NAME}|tail -1|awk {'print $3'})
     export JMETER_PORT=80
 
-    /opt/apache-jmeter-5.2.1/bin/jmeter -n -t ./jmeter/load.jmx
-      -l ${CI_ENVIRONMENT_SLUG}_perf.tlf
-      -JSERVER_URL="${JMETER_URL}"
-      -JSERVER_PORT=${JMETER_PORT}
-      -JVUCount=10
-      -JLoopCount=500
-      -JThinkTime=250
+    /opt/apache-jmeter-5.2.1/bin/jmeter -n -t ./jmeter/load.jmx \
+      -l ${CI_ENVIRONMENT_SLUG}_perf.tlf \
+      -JSERVER_URL="${JMETER_URL}" \
+      -JSERVER_PORT=${JMETER_PORT} \
+      -JVUCount=10 \
+      -JLoopCount=500 \
+      -JThinkTime=250 \
       -JDT_LTN="PerfCheck_${CI_COMMIT_SHA}"
     
     cat ${CI_ENVIRONMENT_SLUG}_perf.tlf
