--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,7 +128,7 @@ install-keptn:
     aws route53 change-resource-record-sets --hosted-zone-id "${ZONE_ID}" --change-batch "{\"Changes\":[{\"Action\":\"CREATE\",\"ResourceRecordSet\":{\"Name\":\"*.${AWS_ROUTE53_DOMAIN}.\",\"Type\":\"CNAME\",\"TTL\":60,\"ResourceRecords\":[{\"Value\":\"${KEPTN_ENDPOINT}\"}]}}]}" --region us-east-1
     echo "Wait for DNS Record beeing updated"
     sleep 100
-    echo y|keptn configure domain ${AWS_ROUTE53_DOMAIN} --keptn-version=release-0.6.0.beta
+    echo y|keptn configure domain ${AWS_ROUTE53_DOMAIN} --keptn-version=release-0.6.0.beta2
     echo "Configure GitLab CI/CD Variable"
     export KEPTN_API=$(head -1 ~/.keptn/.keptn)
     export KEPTN_TOKEN=$(tail -1 ~/.keptn/.keptn)
