--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,8 @@ keptn_evaluation:
 dt_get_problems:
   environment:
     name: test
-  #when: manual
+  start_in: 10 minutes  
+  when: delayed    
   only:
     - tags  
 
